# Ilum

./: .gitignore  .gitmodules  Build_VS2022.bat  Build_VS2022_Vulkan.bat  CMakeLists.txt  LICENSE.txt  README.md  TODO.md  build.bat  imgui.ini  xmake.lua
Source/: CMakeLists.txt  xmake.lua
Source/App/: CMakeLists.txt  main.cpp
Source/Application/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
Source/Archive/: ImGuiHelper.cpp  ImGuiHelper.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderGraphBuilder.hpp  RenderGraphEditor.cpp  System.cpp  System.hpp  System.inl
Source/Archive/Animation/: CMakeLists.txt
Source/Archive/MetaParser/: main.cpp
Source/Archive/Resource/: CMakeLists.txt
Source/Archive/Scene/: Entity.cpp  Precompile.hpp  Scene.cpp  Scene.hpp
Source/Archive/Widget/: MaterialGraphEditor.hpp  RenderGraphEditor.cpp  RenderGraphInspector.cpp  ResourceBrowser.cpp  ResourceBrowser.hpp  SceneHierarchy.cpp  SceneHierarchy.hpp  SceneInspector.hpp  SceneView.hpp
Source/Asset/: CMakeLists.txt  Image2D.cpp  Image2D.hpp  ImageCube.cpp  ImageCube.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  SubMesh.cpp  SubMesh.hpp
Source/CodeGeneration/: CMakeLists.txt  Meta.cpp  Meta.hpp  MetaGenerator.cpp  MetaGenerator.hpp  TypeInfoGenerator.cpp  TypeInfoGenerator.hpp  main.cpp
Source/CodeGeneration/Meta/: GeometryMeta.hpp  RHIMeta.hpp  RHI_Meta.hpp  RHI_MetaInfo.hpp  RenderCoreMeta.hpp  RendererMeta.hpp  ResourceMeta.hpp  SceneMeta.hpp
Source/Core/: CMakeLists.txt  Event.hpp  Event.inl  FileSystem.cpp  FileSystem.hpp  Hash.hpp  Input.cpp  Input.hpp  KeyCode.hpp  Logger.cpp  Logger.hpp  Timer.cpp  Timer.hpp  Window.cpp  Window.hpp
Source/Core/Device/: Input.cpp  Input.hpp  Instance.cpp  Instance.hpp  LogicalDevice.cpp  LogicalDevice.hpp  Monitor.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Surface.cpp  Surface.hpp  Window.cpp  Window.hpp
Source/Core/Engine/: Base.hpp  Context.cpp  Context.h  Context.hpp  Engine.cpp  Engine.hpp  PCH.h  PCH.hpp  Platform.h  Subsystem.h  Subsystem.hpp
Source/Core/Event/: ApplicationEvent.cpp  ApplicationEvent.hpp  Event.cpp  Event.hpp  KeyEvent.cpp  KeyEvent.hpp  MouseEvent.cpp  MouseEvent.hpp
Source/Core/Geometry/: Vertex.cpp  Vertex.hpp  Vertex.inl
Source/Core/Graphics/: GraphicsContext.cpp  GraphicsContext.hpp
Source/Core/JobSystem/: ConcurrentQueue.hpp  JobGraph.cpp  JobGraph.hpp  JobSystem.cpp  JobSystem.hpp  SpinLock.cpp  SpinLock.hpp  ThreadPool.cpp  ThreadPool.hpp
Source/Core/Logger/: Logger.cpp  Logger.hpp  Sink.cpp  Sink.hpp
Source/Core/Platform/: GLFWWindow.cpp  GLFWWindow.hpp
Source/Core/Renderer/: Renderer.hpp
Source/Core/Resource/: IResource.hpp
Source/Core/Utils/: Hash.h  Hash.hpp  NonCopyable.hpp
Source/Dependencies/: CMakeLists.txt
Source/Device/: Input.hpp  Surface.cpp
Source/Editor/: CMakeLists.txt  Editor.cpp  Editor.hpp  ImGuiContext.hpp  Panel.hpp
Source/Editor/ImGui/: ImGuiContext.cpp  ImGuiContext.hpp  ImGuiHelper.cpp  ImGuiHelper.hpp
Source/Editor/Panels/: RenderGraphEditor.cpp  RenderGraphEditor.hpp
Source/Engine/: .gitignore  CMakeLists.txt  Engine.cpp  Engine.hpp  Precompile.hpp  Reflection.hpp  System.cpp  System.hpp  System.inl  main.cpp
Source/Eventing/: Event.inl
Source/File/: FileSystem.hpp
Source/Geometry/: Bound.cpp  Bound.hpp  CMakeLists.txt  Frustum.cpp  Frustum.hpp  Plane.cpp  Plane.hpp  Ray.cpp  Ray.hpp  Vertex.hpp  Vertex.inl
Source/Graphics/: CMakeLists.txt  GraphicsContext.cpp  GraphicsContext.hpp  RenderContext.cpp  RenderContext.hpp  RenderFrame.cpp  RenderFrame.hpp  RenderProfiler.hpp  Vulkan.cpp  Vulkan.hpp
Source/Ilum/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
Source/Ilum_/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
Source/Ilum副本/: CMakeLists.txt
Source/ImGui/: CMakeLists.txt  ImGuiContext.cpp  ImGuiContext.hpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
Source/Logging/: Logger.cpp  Logger.hpp  Sink.hpp
Source/Math/: Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Utility.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Source/MetaParser/: CMakeLists.txt  Header.hpp  main.cpp
Source/Plugin/: CMakeLists.txt  xmake.lua
Source/Pooling/: MemoryPool.cpp  MemoryPool.hpp  MemoryPool.inl
Source/Python/: CMakeLists.txt  main.cpp
Source/RHI/: CMakeLists.txt  RHICommand.cpp  RHICommand.hpp  RHIContext.cpp  RHIContext.hpp
Source/Render/: CMakeLists.txt
Source/RenderGraph/: RenderGraph.hpp
Source/Renderer/: Renderer.cpp  Renderer.hpp
Source/Resource/: CMakeLists.txt  IResource.hpp  ResourceCache.cpp  ResourceCache.hpp
Source/ResourceTest/: CMakeLists.txt  Reflection.hpp  main.cpp
Source/Runtime/: CMakeLists.txt  xmake.lua
Source/Scene/: Entity.hpp  EntityManager.cpp  SystemManager.hpp
Source/Shaders/: AnimationEditor.hlsl  Attribute.hlsli  BRDFPreIntegration.hlsl  BxDF.glsl  BxDF.hlsl  BxDF.hlsli  CMakeLists.txt  Common.hlsli  Complex.hlsli  Constants.hlsli  DrawUV.hlsl  EquirectangularToCubemap.hlsl  FXAA.hlsl  Fetch.hlsli  Geometry.glsl  GlobalBuffer.glsl  GlobalFunction.glsl  ImGui.frag  ImGui.hlsl  Integrator.hlsli  Interaction.glsl  Interaction.hlsli  Intersection.glsl  KullaConty.hlsl  Light.hlsli  LightSource.hlsli  Lights.glsl  Lights.hlsli  Material.glsl  Material.hlsli  MaterialEditor.hlsl  MaterialResource.hlsli  Material_.hlsli  Math.glsl  Math.hlsli  PathTracing.hlsl  Random.glsl  Random.hlsli  Ray.hlsli  RayTrace.hlsli  (+20 more)
Source/Test/: CMakeLists.txt  main.cpp
Source/Threading/: ThreadPool.hpp  ThreadPool.inl
Source/Timing/: Stopwatch.cpp  Timer.hpp
Source/Utils/: Base.hpp  PCH.cpp  PCH.hpp
Source/Vulkan/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Command.cpp  Command.hpp  Descriptor.cpp  Descriptor.hpp  Device.cpp  Device.hpp  Pipeline.cpp  Pipeline.hpp  RenderContext.cpp  RenderContext.hpp  RenderFrame.cpp  RenderFrame.hpp  RenderPass.cpp  RenderPass.hpp  Shader.cpp  Shader.hpp  Synchronize.cpp  Synchronize.hpp  Texture.cpp  Texture.hpp  Vulkan.cpp  Vulkan.hpp
Source/_Generate/: Generate.hpp
(+2192 files in other folders)
