add_subdirectory(App)
add_subdirectory(Ilum)
add_subdirectory(Core)
add_subdirectory(Graphics)
add_subdirectory(Geometry)
add_subdirectory(Asset)
add_subdirectory(Vulkan)
add_subdirectory(RenderGraph)
add_subdirectory(Renderer)
add_subdirectory(Scene)
add_subdirectory(Editor)
add_subdirectory(Application)