function(add_widget name)
    set(TARGET_NAME Editor.${name})
    add_library(${TARGET_NAME} MODULE ${name}.cpp)
    set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "Plugin/Editor")
    target_link_libraries(${TARGET_NAME} PRIVATE Core)
    target_link_libraries(${TARGET_NAME} PRIVATE Editor)
    target_link_libraries(${TARGET_NAME} PRIVATE Renderer)
    target_link_libraries(${TARGET_NAME} PRIVATE RHI)
    target_link_libraries(${TARGET_NAME} PRIVATE imgui)
    add_dependencies(Plugins ${TARGET_NAME})
    target_compile_definitions(${TARGET_NAME} PRIVATE "-DNOMINMAX")
endfunction()

# add_widget(SceneView)
# target_link_libraries(Editor.SceneView PRIVATE Renderer glm imgui ImGuizmo Resource Scene RHI Geometry glfw)
# 
add_widget(SceneHierarchy)
target_link_libraries(Editor.SceneHierarchy PRIVATE SceneGraph Components)
set_target_properties(Editor.SceneHierarchy PROPERTIES LINK_FLAGS "/NODEFAULTLIB:MSVCRT")

add_widget(SceneInspector)
target_link_libraries(Editor.SceneInspector PRIVATE SceneGraph Components)
set_target_properties(Editor.SceneInspector PROPERTIES LINK_FLAGS "/NODEFAULTLIB:MSVCRT")

add_widget(MainMenu)
target_link_libraries(Editor.MainMenu PRIVATE SceneGraph nfd Components)
set_target_properties(Editor.MainMenu PROPERTIES LINK_FLAGS "/NODEFAULTLIB:MSVCRT")

add_widget(MeshEditor)
target_link_libraries(Editor.MeshEditor PRIVATE nfd Geometry Resource)
set_target_properties(Editor.MeshEditor PROPERTIES LINK_FLAGS "/NODEFAULTLIB:MSVCRT")