function(add_importer name)
    set(TARGET_NAME Importer.${name})
    add_library(${TARGET_NAME} MODULE ${name}.cpp)
    set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "Plugin/Importer")
    target_link_libraries(${TARGET_NAME} PRIVATE Core)
    target_link_libraries(${TARGET_NAME} PRIVATE RHI)
    target_link_libraries(${TARGET_NAME} PRIVATE Resource)
    add_dependencies(Plugins ${TARGET_NAME})
    target_compile_definitions(${TARGET_NAME} PRIVATE "-DNOMINMAX")
endfunction()

add_importer(Assimp)
target_link_libraries(Importer.Assimp PRIVATE assimp::assimp Geometry meshoptimizer::meshoptimizer stb)

add_importer(DDS)
add_importer(STB)
target_link_libraries(Importer.STB PRIVATE stb)
