function(add_pass category name)
    set(TARGET_NAME RenderPass.${category}.${name})
    add_library(${TARGET_NAME} MODULE ${name}.cpp)
    set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "Plugin/RenderPass")
    target_link_libraries(${TARGET_NAME} PRIVATE Core)
    target_link_libraries(${TARGET_NAME} PRIVATE RHI)
    target_link_libraries(${TARGET_NAME} PRIVATE RenderGraph)
    target_link_libraries(${TARGET_NAME} PRIVATE Renderer)
    target_link_libraries(${TARGET_NAME} PRIVATE Scene)
    target_link_libraries(${TARGET_NAME} PRIVATE Resource)
    target_link_libraries(${TARGET_NAME} PRIVATE Geometry)
    target_link_libraries(${TARGET_NAME} PRIVATE Material)
    target_link_libraries(${TARGET_NAME} PRIVATE imgui)
    add_dependencies(Plugins ${TARGET_NAME})
    target_compile_definitions(${TARGET_NAME} PRIVATE "-DNOMINMAX")
    copy_shared_lib(${TARGET_NAME} RenderPass)
endfunction()

add_pass(Output Present)
add_pass(Transfer CopyImageRGBA16)
# add_pass(Triangle)
add_pass(RenderPath VisibilityGeometryPass)
add_pass(RenderPath VisibilityBufferVisualization)
add_pass(RayTracing PathTracing)